--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Project-specific. Videos, .nii files, etc
+data/
+*.nii
+*.png
+*.jpg
+*.m4v
+*.mp4
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
